Fix title descenders getting cut off

--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,10 @@
   pointer-events: none;
 }
 
+.snippet-card-code > pre {
+  padding: 0px;
+}
+
 .snippet-card-open {
   position: fixed;
   left: 20vw;
